set(TARGET_NAME ${PROJECT_NAME}_example)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(${TARGET_NAME}_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(${TARGET_NAME}_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE ${TARGET_NAME}_HDR_FILES ${${TARGET_NAME}_INCLUDE_DIR}/*.h ${${TARGET_NAME}_INCLUDE_DIR}/*.hpp)
file(GLOB_RECURSE ${TARGET_NAME}_SRC_FILES ${${TARGET_NAME}_SOURCE_DIR}/*.cpp)

add_executable(${TARGET_NAME} ${${TARGET_NAME}_HDR_FILES} ${${TARGET_NAME}_SRC_FILES})
target_include_directories(${TARGET_NAME} PRIVATE ${${TARGET_NAME}_INCLUDE_DIR})

target_link_libraries(${TARGET_NAME} PRIVATE PopMsgBox)
